updated to use npm start

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a web app using node and mongodb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "gstrauss",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "fs-extra": "^9.0.0",
     "mongoose": "^5.9.7",
     "multer": "^1.4.2",
+    "npm-start": "^1.4.2",
     "pug": "^2.0.4"
   }
 }
